# Backtesting-Library

./: .gitignore  CMakeLists.txt
bindings/: bindings.cpp
include/: backtester.h  dataloader.h  events.h
python/backtester/: data.py  strategy.py
src/: backtester.cpp
